force-app/main/default/objects/Candidate_Profile__c/Candidate_Profile__c.object-meta.xml
<CustomObject>
    <label>Candidate Profile</label>
    <nameField>
        <label>Candidate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Candidate Profiles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>