force-app/main/default/objects/Candidate_Profile__c/fields/Designation__c.field-meta.xml
<CustomField>
    <fullName>Designation__c</fullName>
    <label>Designation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Salesforce Developer</fullName>
            </value>
            <value>
                <fullName>Java Developer</fullName>
            </value>
            <value>
                <fullName>Web Developer</fullName>
            </value>
            <value>
                <fullName>Tester</fullName>
            </value>
            <value>
                <fullName>Help Desk Support</fullName>
            </value>
            <value>
                <fullName>Network Administrator</fullName>
            </value>
            <value>
                <fullName>Cyber Security</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>