force-app/main/default/objects/Candidate_Profile__c/fields/Employers__c.field-meta.xml
<CustomField>
    <fullName>Employers__c</fullName>
    <label>Employers</label>
    <length>50</length>
    <type>Text</type>
</CustomField>