force-app/main/default/objects/Candidate_Profile__c/fields/Exclude_Employers__c.field-meta.xml
<CustomField>
    <fullName>Exclude_Employers__c</fullName>
    <label>Exclude Employers</label>
    <length>50</length>
    <type>Text</type>
</CustomField>