force-app/main/default/objects/Candidate_Profile__c/fields/From_Year_Of_Graduation__c.field-meta.xml
<CustomField>
    <fullName>From_Year_Of_Graduation__c</fullName>
    <label>From Year Of Graduation</label>
    <type>Date</type>
</CustomField>