force-app/main/default/objects/Candidate_Profile__c/fields/Gmail__c.field-meta.xml
<CustomField>
    <fullName>Gmail__c</fullName>
    <label>Gmail</label>
    <type>Email</type>
</CustomField>