force-app/main/default/objects/Candidate_Profile__c/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <label>Industry</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>IT Services &amp; Consulting</fullName>
            </value>
            <value>
                <fullName>BPO / Call Centre</fullName>
            </value>
            <value>
                <fullName>Development</fullName>
            </value>
            <value>
                <fullName>Banking</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>