force-app/main/default/objects/Candidate_Profile__c/fields/PG_From_Year_Of_Graduation__c.field-meta.xml
<CustomField>
    <fullName>PG_From_Year_Of_Graduation__c</fullName>
    <label>PG From Year Of Graduation</label>
    <type>Date</type>
</CustomField>