force-app/main/default/objects/Candidate_Profile__c/fields/PG_Institute_Name__c.field-meta.xml
<CustomField>
    <fullName>PG_Institute_Name__c</fullName>
    <label>PG Institute Name</label>
    <length>128</length>
    <type>Text</type>
</CustomField>