force-app/main/default/objects/Candidate_Profile__c/fields/PG_Stream__c.field-meta.xml
<CustomField>
    <fullName>PG_Stream__c</fullName>
    <label>PG Stream</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>M.Tech</fullName>
            </value>
            <value>
                <fullName>M.Com</fullName>
            </value>
            <value>
                <fullName>MCA</fullName>
            </value>
            <value>
                <fullName>MS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>