force-app/main/default/objects/Candidate_Profile__c/fields/PG_YOG__c.field-meta.xml
<CustomField>
    <fullName>PG_YOG__c</fullName>
    <label>PG YOG</label>
    <length>50</length>
    <type>Text</type>
</CustomField>