force-app/main/default/objects/Candidate_Profile__c/fields/Preferred_Location__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Location__c</fullName>
    <label>Preferred Location</label>
    <type>TextArea</type>
</CustomField>