force-app/main/default/objects/Candidate_Profile__c/fields/Selection_Stage__c.field-meta.xml
<CustomField>
    <fullName>Selection_Stage__c</fullName>
    <label>Selection Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Shortlisted</fullName>
            </value>
            <value>
                <fullName>Pending Validation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>