force-app/main/default/objects/Candidate_Profile__c/fields/Skills_List__c.field-meta.xml
<CustomField>
    <fullName>Skills_List__c</fullName>
    <label>Skills List</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Skill_Set</valueSetName>
    </valueSet>
</CustomField>