force-app/main/default/objects/Candidate_Profile__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Profile_Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Internal Submit</fullName>
            </value>
            <value>
                <fullName>Lead Approved</fullName>
            </value>
            <value>
                <fullName>Lead Rejected</fullName>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Client Approved</fullName>
            </value>
            <value>
                <fullName>Client Rejected</fullName>
            </value>
            <value>
                <fullName>On Interview Process</fullName>
            </value>
            <value>
                <fullName>Document Verified</fullName>
            </value>
            <value>
                <fullName>Document Rejected</fullName>
            </value>
            <value>
                <fullName>Offer Letter</fullName>
            </value>
            <value>
                <fullName>Onboard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>