force-app/main/default/objects/Candidate_Profile__c/fields/To_Year_Of_Graduation__c.field-meta.xml
<CustomField>
    <fullName>To_Year_Of_Graduation__c</fullName>
    <label>To Year Of Graduation</label>
    <type>Date</type>
</CustomField>