force-app/main/default/objects/Candidate_Profile__c/fields/UG_Education_Type__c.field-meta.xml
<CustomField>
    <fullName>UG_Education_Type__c</fullName>
    <label>UG Education Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Full Time</fullName>
            </value>
            <value>
                <fullName>Part Time</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>