force-app/main/default/objects/Candidate_Profile__c/fields/UG_Institute_Name__c.field-meta.xml
<CustomField>
    <fullName>UG_Institute_Name__c</fullName>
    <label>UG Institute Name</label>
    <length>128</length>
    <type>Text</type>
</CustomField>