force-app/main/default/objects/Candidate_Profile__c/fields/UG_Stream__c.field-meta.xml
<CustomField>
    <fullName>UG_Stream__c</fullName>
    <label>UG Stream</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BE/B.Tech</fullName>
            </value>
            <value>
                <fullName>B.Com</fullName>
            </value>
            <value>
                <fullName>BCA</fullName>
            </value>
            <value>
                <fullName>BSC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>