force-app/main/default/objects/Candidate_Profile__c/fields/UG_YOG__c.field-meta.xml
<CustomField>
    <fullName>UG_YOG__c</fullName>
    <label>UG YOG</label>
    <length>50</length>
    <type>Text</type>
</CustomField>